# datamate

./: .gitignore  .pre-commit-config.yaml  README.md  license  pyproject.toml  setup.py
datamate/: __init__.py  directory.py  namespaces.py
examples/: 01. Introduction to Datamate.ipynb  another thread.ipynb
tests/: swmr.py  test_directory.py  test_namespaces.py  test_swmr.py
