[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "datamate/version.py"

[project]
name = "datamate"
dynamic = ["version"]
description = "A data organization and compilation system."
authors = [
    {name = "Janne K. Lappalainen"},
    {name = "Mason McGill"}
]
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "pandas",
    "typing_extensions",
    "h5py>=3.6.0",
    "ruamel.yaml"
]


[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "jupyter",
    "setuptools_scm",
    "pytest"
]
notebook = [
    "ipython",
    "notebook",
    "ipywidgets",
    "tqdm",
    "matplotlib",
    "toolz"
]

[tool.setuptools.packages.find]
include=["datamate"]

[tool.black]
line-length = 88  

[[tool.pre-commit.repos]]
repo = "https://github.com/psf/black"
rev = "24.1.1"
hooks = [
    { id = "black", language_version = "python3" }
]